index.css
body {
  margin: 0px;
  background-image: url(./picture/night.jpg);
  background-size: contain;
  background-repeat: repeat;
}

.jumbotron {
  opacity: 0.4;
  box-shadow: 10px 8px 10px #616060;
  background-color: #201335;
  margin-top: 2vh;
}
.col-md-3 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}
.fas,
.fab {
  color: #ffb17a;
}

#midText {
  color: rgb(255, 255, 255);
}
#read-less-btn {
  display: none;
}

#works {
  background-color: #201335;
  box-shadow: 10px 8px 10px #616060;
  color: #ffffff;
}
#progress {
  background-color: #201335;
  box-shadow: 10px 8px 10px #616060;
  color: #ffffff;
}
#literature {
  background-color: #201335;
  box-shadow: 10px 8px 10px #616060;
  color: #ffffff;
}
.nav-link {
  font-weight: bold;
  color: rgb(165, 42, 42);
}

#novaDiv {
  background-color: rgb(255, 255, 255);
  border-radius: 50%;
  width: 1vh;
  height: 1vh;
  position: absolute;
  top: 4vh;
  right: 5vw;
  background-image: radial-gradient(rgb(255, 255, 0), rgb(255, 255, 255) 60%);
  z-index: -2;
}

@keyframes orbit {
  50% {
    left: 50vw;
  }
  100% {
    left: 100vw;
  }
}

#shipDiv {
  color: aquamarine;
  position: absolute;
  bottom: 0vh;
  left: 6vw;
  visibility: hidden;
}
#laserDiv {
  background-color: rgb(72, 199, 55);
  border-radius: 30%;
  width: 2vw;
  height: 3px;
  position: absolute;
  top: 4vh;
  left: 6vw;
  visibility: hidden;
  z-index: -3;
}
#btnToggle {
  color: rgb(255, 255, 0);
  background: linear-gradient(90deg, rgb(71, 71, 131), black);
  position: fixed;
  top: 6vh;
  right: 1vw;
  border-radius: 50%;
  width: 3.5em;
  height: 3.5em;
  z-index: 2;
}
#novaButton {
  color: rgb(255, 255, 0);
  background: linear-gradient(90deg, rgb(71, 71, 131), black);
  position: absolute;
  top: 18vh;
  right: 1vw;
  border-radius: 50%;
  width: 3.6em;
  height: 3.6em;

  z-index: 2;
}
#btnHome {
  animation: orbit 6s linear 3s infinite;
  color: rgb(0, 132, 255);
  position: fixed;
  top: 0vh;
  left: 1vw;
  border-radius: 50%;
  width: 8vh;
  height: 8vh;
  font-size: 8.1vh;
  z-index: -1;
  background-image: radial-gradient(
    rgb(85, 79, 24),
    rgb(0, 128, 0),
    rgb(0, 0, 0)
  );
}

@media (max-width: 768px) {
  iframe {
    max-width: 72vw;
    margin-right: 2vw;
  }
}
#footer {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

